--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -22,7 +22,6 @@
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "sharp": "^0.33.3",
     "validator": "^13.11.0"
   }
 }
